// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`build > build all 1`] = `undefined`;

exports[`build > build all 2`] = `
{
  "alert": [
    {
      "base": [],
      "compoundVariants": [],
      "defaultVariants": {},
      "file": undefined,
      "meta": {},
      "variants": {},
    },
    {
      "base": [],
      "compoundVariants": [],
      "defaultVariants": {},
      "file": undefined,
      "meta": {},
      "variants": {
        "type": {
          "accent": [
            "alert-accent",
          ],
          "error": [
            "alert-error",
          ],
          "info": [
            "alert-info",
          ],
          "neutral": [
            "alert-neutral",
          ],
          "primary": [
            "alert-primary",
          ],
          "secondary": [
            "alert-secondary",
          ],
          "success": [
            "alert-success",
          ],
          "warning": [
            "alert-warning",
          ],
        },
      },
    },
    {
      "base": [
        "alert",
      ],
      "compoundVariants": [],
      "defaultVariants": {},
      "file": undefined,
      "meta": {},
      "variants": {},
    },
  ],
  "avatar": [
    {
      "base": [],
      "compoundVariants": [],
      "defaultVariants": {},
      "file": undefined,
      "meta": {},
      "variants": {},
    },
    {
      "base": [],
      "compoundVariants": [],
      "defaultVariants": {},
      "file": undefined,
      "meta": {},
      "variants": {},
    },
    {
      "base": [
        "avatar",
      ],
      "compoundVariants": [],
      "defaultVariants": {},
      "file": undefined,
      "meta": {},
      "variants": {},
    },
  ],
  "badge": [
    {
      "base": [],
      "compoundVariants": [],
      "defaultVariants": {},
      "file": undefined,
      "meta": {},
      "variants": {
        "size": {
          "lg": [
            "badge-lg",
          ],
          "md": [
            "badge-md",
          ],
          "sm": [
            "badge-sm",
          ],
          "xs": [
            "badge-xs",
          ],
        },
      },
    },
    {
      "base": [],
      "compoundVariants": [],
      "defaultVariants": {},
      "file": undefined,
      "meta": {},
      "variants": {
        "ghost": {
          "true": [
            "badge-ghost",
          ],
        },
        "outline": {
          "true": [
            "badge-outline",
          ],
        },
        "type": {
          "accent": [
            "badge-accent",
          ],
          "error": [
            "badge-error",
          ],
          "info": [
            "badge-info",
          ],
          "neutral": [
            "badge-neutral",
          ],
          "primary": [
            "badge-primary",
          ],
          "secondary": [
            "badge-secondary",
          ],
          "success": [
            "badge-success",
          ],
          "warning": [
            "badge-warning",
          ],
        },
      },
    },
    {
      "base": [
        "badge",
      ],
      "compoundVariants": [],
      "defaultVariants": {},
      "file": undefined,
      "meta": {},
      "variants": {},
    },
  ],
  "bottom-navigation": [
    {
      "base": [],
      "compoundVariants": [],
      "defaultVariants": {},
      "file": undefined,
      "meta": {},
      "variants": {
        "size": {
          "lg": [
            "btm-nav-lg",
          ],
          "md": [
            "btm-nav-md",
          ],
          "sm": [
            "btm-nav-sm",
          ],
          "xs": [
            "btm-nav-xs",
          ],
        },
      },
    },
    {
      "base": [],
      "compoundVariants": [],
      "defaultVariants": {},
      "file": undefined,
      "meta": {},
      "variants": {
        "disabled": {
          "true": [
            "disabled",
          ],
        },
      },
    },
    {
      "base": [
        "btm-nav",
      ],
      "compoundVariants": [],
      "defaultVariants": {},
      "file": undefined,
      "meta": {},
      "variants": {},
    },
  ],
  "breadcrumbs": [
    {
      "base": [],
      "compoundVariants": [],
      "defaultVariants": {},
      "file": undefined,
      "meta": {},
      "variants": {},
    },
    {
      "base": [],
      "compoundVariants": [],
      "defaultVariants": {},
      "file": undefined,
      "meta": {},
      "variants": {},
    },
    {
      "base": [
        "breadcrumbs",
      ],
      "compoundVariants": [],
      "defaultVariants": {},
      "file": undefined,
      "meta": {},
      "variants": {},
    },
  ],
  "button": [
    {
      "base": [],
      "compoundVariants": [],
      "defaultVariants": {},
      "file": undefined,
      "meta": {},
      "variants": {
        "shape": {
          "circle": [
            "btn-circle",
          ],
          "square": [
            "btn-square",
          ],
        },
        "size": {
          "block": [
            "btn-block",
          ],
          "lg": [
            "btn-lg",
          ],
          "md": [
            "btn-md",
          ],
          "sm": [
            "btn-sm",
          ],
          "wide": [
            "btn-wide",
          ],
          "xs": [
            "btn-xs",
          ],
        },
      },
    },
    {
      "base": [],
      "compoundVariants": [],
      "defaultVariants": {},
      "file": undefined,
      "meta": {},
      "variants": {
        "active": {
          "true": [
            "btn-active",
          ],
        },
        "focusVisible": {
          "true": [
            "btn-focus-visible",
          ],
        },
        "ghost": {
          "true": [
            "btn-ghost",
          ],
        },
        "glass": {
          "true": [
            "glass",
          ],
        },
        "hover": {
          "true": [
            "btn-hover",
          ],
        },
        "link": {
          "true": [
            "btn-link",
          ],
        },
        "outline": {
          "true": [
            "btn-outline",
          ],
        },
        "type": {
          "accent": [
            "btn-accent",
          ],
          "error": [
            "btn-error",
          ],
          "info": [
            "btn-info",
          ],
          "neutral": [
            "btn-neutral",
          ],
          "primary": [
            "btn-primary",
          ],
          "secondary": [
            "btn-secondary",
          ],
          "success": [
            "btn-success",
          ],
          "warning": [
            "btn-warning",
          ],
        },
      },
    },
    {
      "base": [
        "btn",
      ],
      "compoundVariants": [],
      "defaultVariants": {},
      "file": undefined,
      "meta": {},
      "variants": {
        "disabled": {
          "true": [
            "btn-disabled",
          ],
        },
      },
    },
  ],
  "card": [
    {
      "base": [],
      "compoundVariants": [],
      "defaultVariants": {},
      "file": undefined,
      "meta": {},
      "variants": {},
    },
    {
      "base": [],
      "compoundVariants": [],
      "defaultVariants": {},
      "file": undefined,
      "meta": {},
      "variants": {},
    },
    {
      "base": [
        "card",
      ],
      "compoundVariants": [],
      "defaultVariants": {},
      "file": undefined,
      "meta": {},
      "variants": {},
    },
  ],
  "carousel": [
    {
      "base": [],
      "compoundVariants": [],
      "defaultVariants": {},
      "file": undefined,
      "meta": {},
      "variants": {},
    },
    {
      "base": [],
      "compoundVariants": [],
      "defaultVariants": {},
      "file": undefined,
      "meta": {},
      "variants": {},
    },
    {
      "base": [
        "carousel",
      ],
      "compoundVariants": [],
      "defaultVariants": {},
      "file": undefined,
      "meta": {},
      "variants": {},
    },
  ],
  "chat": [
    {
      "base": [],
      "compoundVariants": [],
      "defaultVariants": {},
      "file": undefined,
      "meta": {},
      "variants": {},
    },
    {
      "base": [],
      "compoundVariants": [],
      "defaultVariants": {},
      "file": undefined,
      "meta": {},
      "variants": {},
    },
    {
      "base": [
        "chat",
      ],
      "compoundVariants": [],
      "defaultVariants": {},
      "file": undefined,
      "meta": {},
      "variants": {},
    },
  ],
  "checkbox": [
    {
      "base": [],
      "compoundVariants": [],
      "defaultVariants": {},
      "file": undefined,
      "meta": {},
      "variants": {
        "size": {
          "lg": [
            "checkbox-lg",
          ],
          "md": [
            "checkbox-md",
          ],
          "sm": [
            "checkbox-sm",
          ],
          "xs": [
            "checkbox-xs",
          ],
        },
      },
    },
    {
      "base": [],
      "compoundVariants": [],
      "defaultVariants": {},
      "file": undefined,
      "meta": {},
      "variants": {
        "type": {
          "accent": [
            "checkbox-accent",
          ],
          "error": [
            "checkbox-error",
          ],
          "info": [
            "checkbox-info",
          ],
          "neutral": [
            "checkbox-neutral",
          ],
          "primary": [
            "checkbox-primary",
          ],
          "secondary": [
            "checkbox-secondary",
          ],
          "success": [
            "checkbox-success",
          ],
          "warning": [
            "checkbox-warning",
          ],
        },
      },
    },
    {
      "base": [
        "checkbox",
      ],
      "compoundVariants": [],
      "defaultVariants": {},
      "file": undefined,
      "meta": {},
      "variants": {},
    },
  ],
  "collapse": [
    {
      "base": [],
      "compoundVariants": [],
      "defaultVariants": {},
      "file": undefined,
      "meta": {},
      "variants": {},
    },
    {
      "base": [],
      "compoundVariants": [],
      "defaultVariants": {},
      "file": undefined,
      "meta": {},
      "variants": {},
    },
    {
      "base": [],
      "compoundVariants": [],
      "defaultVariants": {},
      "file": undefined,
      "meta": {},
      "variants": {},
    },
  ],
  "countdown": [
    {
      "base": [],
      "compoundVariants": [],
      "defaultVariants": {},
      "file": undefined,
      "meta": {},
      "variants": {},
    },
    {
      "base": [],
      "compoundVariants": [],
      "defaultVariants": {},
      "file": undefined,
      "meta": {},
      "variants": {},
    },
    {
      "base": [
        "countdown",
      ],
      "compoundVariants": [],
      "defaultVariants": {},
      "file": undefined,
      "meta": {},
      "variants": {},
    },
  ],
  "diff": [
    {
      "base": [],
      "compoundVariants": [],
      "defaultVariants": {},
      "file": undefined,
      "meta": {},
      "variants": {},
    },
    {
      "base": [],
      "compoundVariants": [],
      "defaultVariants": {},
      "file": undefined,
      "meta": {},
      "variants": {},
    },
    {
      "base": [
        "diff",
      ],
      "compoundVariants": [],
      "defaultVariants": {},
      "file": undefined,
      "meta": {},
      "variants": {},
    },
  ],
  "divider": [
    {
      "base": [],
      "compoundVariants": [],
      "defaultVariants": {},
      "file": undefined,
      "meta": {},
      "variants": {
        "direction": {
          "horizontal": [
            "divider-horizontal",
          ],
          "vertical": [
            "divider-vertical",
          ],
        },
      },
    },
    {
      "base": [],
      "compoundVariants": [],
      "defaultVariants": {},
      "file": undefined,
      "meta": {},
      "variants": {
        "type": {
          "accent": [
            "divider-accent",
          ],
          "error": [
            "divider-error",
          ],
          "info": [
            "divider-info",
          ],
          "neutral": [
            "divider-neutral",
          ],
          "primary": [
            "divider-primary",
          ],
          "secondary": [
            "divider-secondary",
          ],
          "success": [
            "divider-success",
          ],
          "warning": [
            "divider-warning",
          ],
        },
      },
    },
    {
      "base": [
        "divider",
      ],
      "compoundVariants": [],
      "defaultVariants": {},
      "file": undefined,
      "meta": {},
      "variants": {},
    },
  ],
  "drawer": [
    {
      "base": [],
      "compoundVariants": [],
      "defaultVariants": {},
      "file": undefined,
      "meta": {},
      "variants": {},
    },
    {
      "base": [],
      "compoundVariants": [],
      "defaultVariants": {},
      "file": undefined,
      "meta": {},
      "variants": {},
    },
    {
      "base": [],
      "compoundVariants": [],
      "defaultVariants": {},
      "file": undefined,
      "meta": {},
      "variants": {},
    },
  ],
  "dropdown": [
    {
      "base": [],
      "compoundVariants": [],
      "defaultVariants": {},
      "file": undefined,
      "meta": {},
      "variants": {},
    },
    {
      "base": [],
      "compoundVariants": [],
      "defaultVariants": {},
      "file": undefined,
      "meta": {},
      "variants": {},
    },
    {
      "base": [],
      "compoundVariants": [],
      "defaultVariants": {},
      "file": undefined,
      "meta": {},
      "variants": {},
    },
  ],
  "file-input": [
    {
      "base": [],
      "compoundVariants": [],
      "defaultVariants": {},
      "file": undefined,
      "meta": {},
      "variants": {
        "size": {
          "lg": [
            "file-input-lg",
          ],
          "md": [
            "file-input-md",
          ],
          "sm": [
            "file-input-sm",
          ],
          "xs": [
            "file-input-xs",
          ],
        },
      },
    },
    {
      "base": [],
      "compoundVariants": [],
      "defaultVariants": {},
      "file": undefined,
      "meta": {},
      "variants": {
        "bordered": {
          "true": [
            "file-input-bordered",
          ],
        },
        "disabled": {
          "true": [
            "file-input",
          ],
        },
        "ghost": {
          "true": [
            "file-input-ghost",
          ],
        },
        "type": {
          "accent": [
            "file-input-accent",
          ],
          "error": [
            "file-input-error",
          ],
          "info": [
            "file-input-info",
          ],
          "neutral": [
            "file-input-neutral",
          ],
          "primary": [
            "file-input-primary",
          ],
          "secondary": [
            "file-input-secondary",
          ],
          "success": [
            "file-input-success",
          ],
          "warning": [
            "file-input-warning",
          ],
        },
      },
    },
    {
      "base": [
        "file-input",
      ],
      "compoundVariants": [],
      "defaultVariants": {},
      "file": undefined,
      "meta": {},
      "variants": {},
    },
  ],
  "footer": [
    {
      "base": [],
      "compoundVariants": [],
      "defaultVariants": {},
      "file": undefined,
      "meta": {},
      "variants": {},
    },
    {
      "base": [],
      "compoundVariants": [],
      "defaultVariants": {},
      "file": undefined,
      "meta": {},
      "variants": {},
    },
    {
      "base": [],
      "compoundVariants": [],
      "defaultVariants": {},
      "file": undefined,
      "meta": {},
      "variants": {},
    },
  ],
  "form": [
    {
      "base": [],
      "compoundVariants": [],
      "defaultVariants": {},
      "file": undefined,
      "meta": {},
      "variants": {},
    },
    {
      "base": [],
      "compoundVariants": [],
      "defaultVariants": {},
      "file": undefined,
      "meta": {},
      "variants": {},
    },
    {
      "base": [],
      "compoundVariants": [],
      "defaultVariants": {},
      "file": undefined,
      "meta": {},
      "variants": {},
    },
  ],
  "hero": [
    {
      "base": [],
      "compoundVariants": [],
      "defaultVariants": {},
      "file": undefined,
      "meta": {},
      "variants": {},
    },
    {
      "base": [],
      "compoundVariants": [],
      "defaultVariants": {},
      "file": undefined,
      "meta": {},
      "variants": {},
    },
    {
      "base": [],
      "compoundVariants": [],
      "defaultVariants": {},
      "file": undefined,
      "meta": {},
      "variants": {},
    },
  ],
  "indicator": [
    {
      "base": [],
      "compoundVariants": [],
      "defaultVariants": {},
      "file": undefined,
      "meta": {},
      "variants": {},
    },
    {
      "base": [],
      "compoundVariants": [],
      "defaultVariants": {},
      "file": undefined,
      "meta": {},
      "variants": {},
    },
    {
      "base": [],
      "compoundVariants": [],
      "defaultVariants": {},
      "file": undefined,
      "meta": {},
      "variants": {},
    },
  ],
  "input": [
    {
      "base": [],
      "compoundVariants": [],
      "defaultVariants": {},
      "file": undefined,
      "meta": {},
      "variants": {},
    },
    {
      "base": [],
      "compoundVariants": [],
      "defaultVariants": {},
      "file": undefined,
      "meta": {},
      "variants": {},
    },
    {
      "base": [],
      "compoundVariants": [],
      "defaultVariants": {},
      "file": undefined,
      "meta": {},
      "variants": {},
    },
  ],
  "join": [
    {
      "base": [],
      "compoundVariants": [],
      "defaultVariants": {},
      "file": undefined,
      "meta": {},
      "variants": {
        "direction": {
          "horizontal": [
            "join-horizontal",
          ],
          "vertical": [
            "join-vertical",
          ],
        },
      },
    },
    {
      "base": [],
      "compoundVariants": [],
      "defaultVariants": {},
      "file": undefined,
      "meta": {},
      "variants": {},
    },
    {
      "base": [
        "join",
      ],
      "compoundVariants": [],
      "defaultVariants": {},
      "file": undefined,
      "meta": {},
      "variants": {},
    },
  ],
  "kbd": [
    {
      "base": [],
      "compoundVariants": [],
      "defaultVariants": {},
      "file": undefined,
      "meta": {},
      "variants": {
        "size": {
          "lg": [
            "kbd-lg",
          ],
          "md": [
            "kbd-md",
          ],
          "sm": [
            "kbd-sm",
          ],
          "xs": [
            "kbd-xs",
          ],
        },
      },
    },
    {
      "base": [],
      "compoundVariants": [],
      "defaultVariants": {},
      "file": undefined,
      "meta": {},
      "variants": {},
    },
    {
      "base": [
        "kbd",
      ],
      "compoundVariants": [],
      "defaultVariants": {},
      "file": undefined,
      "meta": {},
      "variants": {},
    },
  ],
  "link": [
    {
      "base": [],
      "compoundVariants": [],
      "defaultVariants": {},
      "file": undefined,
      "meta": {},
      "variants": {},
    },
    {
      "base": [],
      "compoundVariants": [],
      "defaultVariants": {},
      "file": undefined,
      "meta": {},
      "variants": {
        "type": {
          "accent": [
            "link-accent",
          ],
          "error": [
            "link-error",
          ],
          "info": [
            "link-info",
          ],
          "neutral": [
            "link-neutral",
          ],
          "primary": [
            "link-primary",
          ],
          "secondary": [
            "link-secondary",
          ],
          "success": [
            "link-success",
          ],
          "warning": [
            "link-warning",
          ],
        },
      },
    },
    {
      "base": [
        "link",
      ],
      "compoundVariants": [],
      "defaultVariants": {},
      "file": undefined,
      "meta": {},
      "variants": {
        "hover": {
          "true": [
            "link-hover",
          ],
        },
      },
    },
  ],
  "loading": [
    {
      "base": [],
      "compoundVariants": [],
      "defaultVariants": {},
      "file": undefined,
      "meta": {},
      "variants": {
        "shape": {
          "audio": [
            "loading-audio",
          ],
          "ball-triangle": [
            "loading-ball-triangle",
          ],
          "bars": [
            "loading-bars",
          ],
          "circles": [
            "loading-circles",
          ],
          "grid": [
            "loading-grid",
          ],
          "hearts": [
            "loading-hearts",
          ],
          "oval": [
            "loading-oval",
          ],
          "puff": [
            "loading-puff",
          ],
          "rings": [
            "loading-rings",
          ],
          "spinning-circles": [
            "loading-spinning-circles",
          ],
          "tail-spin": [
            "loading-tail-spin",
          ],
          "three-dots": [
            "loading-three-dots",
          ],
        },
        "size": {
          "lg": [
            "loading-lg",
          ],
          "md": [
            "loading-md",
          ],
          "sm": [
            "loading-sm",
          ],
          "xs": [
            "loading-xs",
          ],
        },
      },
    },
    {
      "base": [],
      "compoundVariants": [],
      "defaultVariants": {},
      "file": undefined,
      "meta": {},
      "variants": {},
    },
    {
      "base": [
        "loading",
      ],
      "compoundVariants": [],
      "defaultVariants": {},
      "file": undefined,
      "meta": {},
      "variants": {},
    },
  ],
  "mask": [
    {
      "base": [],
      "compoundVariants": [],
      "defaultVariants": {},
      "file": undefined,
      "meta": {},
      "variants": {
        "shape": {
          "circle": [
            "mask-circle",
          ],
          "decagon": [
            "mask-decagon",
          ],
          "diamond": [
            "mask-diamond",
          ],
          "heart": [
            "mask-heart",
          ],
          "hexagon": [
            "mask-hexagon",
          ],
          "hexagon-2": [
            "mask-hexagon-2",
          ],
          "parallelogram": [
            "mask-parallelogram",
          ],
          "parallelogram-2": [
            "mask-parallelogram-2",
          ],
          "parallelogram-3": [
            "mask-parallelogram-3",
          ],
          "parallelogram-4": [
            "mask-parallelogram-4",
          ],
          "pentagon": [
            "mask-pentagon",
          ],
          "square": [
            "mask-square",
          ],
          "squircle": [
            "mask-squircle",
          ],
          "star": [
            "mask-star",
          ],
          "star-2": [
            "mask-star-2",
          ],
          "triangle": [
            "mask-triangle",
          ],
          "triangle-2": [
            "mask-triangle-2",
          ],
          "triangle-3": [
            "mask-triangle-3",
          ],
          "triangle-4": [
            "mask-triangle-4",
          ],
        },
      },
    },
    {
      "base": [],
      "compoundVariants": [],
      "defaultVariants": {},
      "file": undefined,
      "meta": {},
      "variants": {},
    },
    {
      "base": [
        "mask",
      ],
      "compoundVariants": [],
      "defaultVariants": {},
      "file": undefined,
      "meta": {},
      "variants": {},
    },
  ],
  "menu": [
    {
      "base": [],
      "compoundVariants": [],
      "defaultVariants": {},
      "file": undefined,
      "meta": {},
      "variants": {},
    },
    {
      "base": [],
      "compoundVariants": [],
      "defaultVariants": {},
      "file": undefined,
      "meta": {},
      "variants": {},
    },
    {
      "base": [],
      "compoundVariants": [],
      "defaultVariants": {},
      "file": undefined,
      "meta": {},
      "variants": {},
    },
  ],
  "navbar": [
    {
      "base": [],
      "compoundVariants": [],
      "defaultVariants": {},
      "file": undefined,
      "meta": {},
      "variants": {},
    },
    {
      "base": [],
      "compoundVariants": [],
      "defaultVariants": {},
      "file": undefined,
      "meta": {},
      "variants": {},
    },
    {
      "base": [],
      "compoundVariants": [],
      "defaultVariants": {},
      "file": undefined,
      "meta": {},
      "variants": {},
    },
  ],
  "progress": [
    {
      "base": [],
      "compoundVariants": [],
      "defaultVariants": {},
      "file": undefined,
      "meta": {},
      "variants": {},
    },
    {
      "base": [],
      "compoundVariants": [],
      "defaultVariants": {},
      "file": undefined,
      "meta": {},
      "variants": {},
    },
    {
      "base": [],
      "compoundVariants": [],
      "defaultVariants": {},
      "file": undefined,
      "meta": {},
      "variants": {},
    },
  ],
  "radial-progress": [
    {
      "base": [],
      "compoundVariants": [],
      "defaultVariants": {},
      "file": undefined,
      "meta": {},
      "variants": {},
    },
    {
      "base": [],
      "compoundVariants": [],
      "defaultVariants": {},
      "file": undefined,
      "meta": {},
      "variants": {},
    },
    {
      "base": [],
      "compoundVariants": [],
      "defaultVariants": {},
      "file": undefined,
      "meta": {},
      "variants": {},
    },
  ],
  "radio": [
    {
      "base": [],
      "compoundVariants": [],
      "defaultVariants": {},
      "file": undefined,
      "meta": {},
      "variants": {},
    },
    {
      "base": [],
      "compoundVariants": [],
      "defaultVariants": {},
      "file": undefined,
      "meta": {},
      "variants": {},
    },
    {
      "base": [],
      "compoundVariants": [],
      "defaultVariants": {},
      "file": undefined,
      "meta": {},
      "variants": {},
    },
  ],
  "range": [
    {
      "base": [],
      "compoundVariants": [],
      "defaultVariants": {},
      "file": undefined,
      "meta": {},
      "variants": {},
    },
    {
      "base": [],
      "compoundVariants": [],
      "defaultVariants": {},
      "file": undefined,
      "meta": {},
      "variants": {},
    },
    {
      "base": [],
      "compoundVariants": [],
      "defaultVariants": {},
      "file": undefined,
      "meta": {},
      "variants": {},
    },
  ],
  "rating": [
    {
      "base": [],
      "compoundVariants": [],
      "defaultVariants": {},
      "file": undefined,
      "meta": {},
      "variants": {},
    },
    {
      "base": [],
      "compoundVariants": [],
      "defaultVariants": {},
      "file": undefined,
      "meta": {},
      "variants": {},
    },
    {
      "base": [],
      "compoundVariants": [],
      "defaultVariants": {},
      "file": undefined,
      "meta": {},
      "variants": {},
    },
  ],
  "select": [
    {
      "base": [],
      "compoundVariants": [],
      "defaultVariants": {},
      "file": undefined,
      "meta": {},
      "variants": {},
    },
    {
      "base": [],
      "compoundVariants": [],
      "defaultVariants": {},
      "file": undefined,
      "meta": {},
      "variants": {},
    },
    {
      "base": [],
      "compoundVariants": [],
      "defaultVariants": {},
      "file": undefined,
      "meta": {},
      "variants": {},
    },
  ],
  "skeleton": [
    {
      "base": [],
      "compoundVariants": [],
      "defaultVariants": {},
      "file": undefined,
      "meta": {},
      "variants": {},
    },
    {
      "base": [],
      "compoundVariants": [],
      "defaultVariants": {},
      "file": undefined,
      "meta": {},
      "variants": {},
    },
    {
      "base": [],
      "compoundVariants": [],
      "defaultVariants": {},
      "file": undefined,
      "meta": {},
      "variants": {},
    },
  ],
  "stack": [
    {
      "base": [],
      "compoundVariants": [],
      "defaultVariants": {},
      "file": undefined,
      "meta": {},
      "variants": {},
    },
    {
      "base": [],
      "compoundVariants": [],
      "defaultVariants": {},
      "file": undefined,
      "meta": {},
      "variants": {},
    },
    {
      "base": [],
      "compoundVariants": [],
      "defaultVariants": {},
      "file": undefined,
      "meta": {},
      "variants": {},
    },
  ],
  "stat": [
    {
      "base": [],
      "compoundVariants": [],
      "defaultVariants": {},
      "file": undefined,
      "meta": {},
      "variants": {},
    },
    {
      "base": [],
      "compoundVariants": [],
      "defaultVariants": {},
      "file": undefined,
      "meta": {},
      "variants": {},
    },
    {
      "base": [],
      "compoundVariants": [],
      "defaultVariants": {},
      "file": undefined,
      "meta": {},
      "variants": {},
    },
  ],
  "steps": [
    {
      "base": [],
      "compoundVariants": [],
      "defaultVariants": {},
      "file": undefined,
      "meta": {},
      "variants": {},
    },
    {
      "base": [],
      "compoundVariants": [],
      "defaultVariants": {},
      "file": undefined,
      "meta": {},
      "variants": {},
    },
    {
      "base": [],
      "compoundVariants": [],
      "defaultVariants": {},
      "file": undefined,
      "meta": {},
      "variants": {},
    },
  ],
  "swap": [
    {
      "base": [],
      "compoundVariants": [],
      "defaultVariants": {},
      "file": undefined,
      "meta": {},
      "variants": {},
    },
    {
      "base": [],
      "compoundVariants": [],
      "defaultVariants": {},
      "file": undefined,
      "meta": {},
      "variants": {},
    },
    {
      "base": [],
      "compoundVariants": [],
      "defaultVariants": {},
      "file": undefined,
      "meta": {},
      "variants": {},
    },
  ],
  "tab": [
    {
      "base": [],
      "compoundVariants": [],
      "defaultVariants": {},
      "file": undefined,
      "meta": {},
      "variants": {},
    },
    {
      "base": [],
      "compoundVariants": [],
      "defaultVariants": {},
      "file": undefined,
      "meta": {},
      "variants": {},
    },
    {
      "base": [],
      "compoundVariants": [],
      "defaultVariants": {},
      "file": undefined,
      "meta": {},
      "variants": {},
    },
  ],
  "table": [
    {
      "base": [],
      "compoundVariants": [],
      "defaultVariants": {},
      "file": undefined,
      "meta": {},
      "variants": {
        "size": {
          "lg": [
            "table-lg",
          ],
          "md": [
            "table-md",
          ],
          "sm": [
            "table-sm",
          ],
          "xs": [
            "table-xs",
          ],
        },
      },
    },
    {
      "base": [],
      "compoundVariants": [],
      "defaultVariants": {},
      "file": undefined,
      "meta": {},
      "variants": {},
    },
    {
      "base": [],
      "compoundVariants": [],
      "defaultVariants": {},
      "file": undefined,
      "meta": {},
      "variants": {},
    },
  ],
  "textarea": [
    {
      "base": [],
      "compoundVariants": [],
      "defaultVariants": {},
      "file": undefined,
      "meta": {},
      "variants": {},
    },
    {
      "base": [],
      "compoundVariants": [],
      "defaultVariants": {},
      "file": undefined,
      "meta": {},
      "variants": {},
    },
    {
      "base": [],
      "compoundVariants": [],
      "defaultVariants": {},
      "file": undefined,
      "meta": {},
      "variants": {},
    },
  ],
  "timeline": [
    {
      "base": [],
      "compoundVariants": [],
      "defaultVariants": {},
      "file": undefined,
      "meta": {},
      "variants": {},
    },
    {
      "base": [],
      "compoundVariants": [],
      "defaultVariants": {},
      "file": undefined,
      "meta": {},
      "variants": {},
    },
    {
      "base": [],
      "compoundVariants": [],
      "defaultVariants": {},
      "file": undefined,
      "meta": {},
      "variants": {},
    },
  ],
  "toast": [
    {
      "base": [],
      "compoundVariants": [],
      "defaultVariants": {},
      "file": undefined,
      "meta": {},
      "variants": {},
    },
    {
      "base": [],
      "compoundVariants": [],
      "defaultVariants": {},
      "file": undefined,
      "meta": {},
      "variants": {},
    },
    {
      "base": [
        "toast",
      ],
      "compoundVariants": [],
      "defaultVariants": {},
      "file": undefined,
      "meta": {},
      "variants": {},
    },
  ],
  "toggle": [
    {
      "base": [],
      "compoundVariants": [],
      "defaultVariants": {},
      "file": undefined,
      "meta": {},
      "variants": {
        "size": {
          "lg": [
            "toggle-lg",
          ],
          "md": [
            "toggle-md",
          ],
          "sm": [
            "toggle-sm",
          ],
          "xs": [
            "toggle-xs",
          ],
        },
      },
    },
    {
      "base": [],
      "compoundVariants": [],
      "defaultVariants": {},
      "file": undefined,
      "meta": {},
      "variants": {
        "type": {
          "accent": [
            "toggle-accent",
          ],
          "error": [
            "toggle-error",
          ],
          "info": [
            "toggle-info",
          ],
          "neutral": [
            "toggle-neutral",
          ],
          "primary": [
            "toggle-primary",
          ],
          "secondary": [
            "toggle-secondary",
          ],
          "success": [
            "toggle-success",
          ],
          "warning": [
            "toggle-warning",
          ],
        },
      },
    },
    {
      "base": [
        "toggle",
      ],
      "compoundVariants": [],
      "defaultVariants": {},
      "file": undefined,
      "meta": {},
      "variants": {},
    },
  ],
  "tooltip": [
    {
      "base": [],
      "compoundVariants": [],
      "defaultVariants": {},
      "file": undefined,
      "meta": {},
      "variants": {},
    },
    {
      "base": [],
      "compoundVariants": [],
      "defaultVariants": {},
      "file": undefined,
      "meta": {},
      "variants": {
        "open": {
          "true": [
            "tooltip-open",
          ],
        },
      },
    },
    {
      "base": [
        "tooltip",
      ],
      "compoundVariants": [],
      "defaultVariants": {},
      "file": undefined,
      "meta": {},
      "variants": {
        "placement": {
          "bottom": [
            "tooltip-bottom",
          ],
          "left": [
            "tooltip-left",
          ],
          "right": [
            "tooltip-right",
          ],
          "top": [
            "tooltip-top",
          ],
        },
      },
    },
  ],
}
`;

exports[`build > build base 1`] = `undefined`;

exports[`build > build base change default selector case  > index 1`] = `
"page {
  --ice-primary: 22 119 255;
  --ice-primary-hover: 64 150 255;
  --ice-primary-active: 9 88 217;
  --ice-primary-content: 255 255 255;
  --ice-success: 82 196 26;
  --ice-success-hover: 115 209 61;
  --ice-success-active: 56 158 13;
  --ice-success-content: 255 255 255;
  --ice-warning: 250 173 20;
  --ice-warning-hover: 255 197 61;
  --ice-warning-active: 212 136 6;
  --ice-warning-content: 255 255 255;
  --ice-error: 245 34 45;
  --ice-error-hover: 255 77 79;
  --ice-error-active: 207 19 34;
  --ice-error-content: 255 255 255;
  --ice-neutral: 102 102 102;
  --ice-neutral-hover: 115 115 115;
  --ice-neutral-active: 64 64 64;
  --ice-neutral-content: 255 255 255;
  --ice-secondary: 235 47 150;
  --ice-secondary-hover: 247 89 171;
  --ice-secondary-active: 196 29 127;
  --ice-secondary-content: 255 255 255;
  --ice-accent: 19 194 194;
  --ice-accent-hover: 54 207 201;
  --ice-accent-active: 8 151 156;
  --ice-accent-content: 255 255 255;
  --ice-info: 47 84 235;
  --ice-info-hover: 89 126 247;
  --ice-info-active: 29 57 196;
  --ice-info-content: 255 255 255;
  --ice-base-100: 255 255 255;
  --ice-base-200: 242 242 242;
  --ice-base-300: 229 230 230;
  --ice-base-content: 31 41 55;
  --ice-ant-neutral-100: 255 255 255;
  --ice-ant-neutral-200: 250 250 250;
  --ice-ant-neutral-300: 245 245 245;
  --ice-ant-neutral-400: 240 240 240;
  --ice-ant-neutral-500: 217 217 217;
  --ice-ant-neutral-600: 191 191 191;
  --ice-ant-neutral-700: 140 140 140;
  --ice-ant-neutral-800: 89 89 89;
  --ice-ant-neutral-900: 67 67 67;
  --ice-ant-neutral-1000: 38 38 38;
  --ice-ant-neutral-1100: 31 31 31;
  --ice-ant-neutral-1200: 20 20 20;
  --ice-ant-neutral-1300: 0 0 0;
  --ice-rounded-box: 1rem;
  --ice-rounded-btn: 0.5rem;
  --ice-rounded-badge: 1.9rem;
  --ice-animation-btn: 0.25s;
  --ice-animation-input: 0.2s;
  --ice-skeleton-duration: 1.2s;
  --ice-border-btn: 1px;
  --ice-tab-border: 1px;
  --ice-tab-radius: 0.5rem ;
}

.dark {
  --ice-primary: 22 104 220;
  --ice-primary-hover: 21 84 173;
  --ice-primary-active: 60 137 232;
  --ice-primary-content: 255 255 255;
  --ice-success: 73 170 25;
  --ice-success-hover: 60 134 24;
  --ice-success-active: 106 190 57;
  --ice-success-content: 255 255 255;
  --ice-warning: 216 150 20;
  --ice-warning-hover: 170 119 20;
  --ice-warning-active: 232 179 57;
  --ice-warning-content: 255 255 255;
  --ice-error: 211 32 41;
  --ice-error-hover: 166 29 36;
  --ice-error-active: 232 71 73;
  --ice-error-content: 255 255 255;
  --ice-neutral: 90 90 90;
  --ice-neutral-hover: 73 73 73;
  --ice-neutral-active: 106 106 106;
  --ice-neutral-content: 255 255 255;
  --ice-secondary: 203 43 131;
  --ice-secondary-hover: 160 38 105;
  --ice-secondary-active: 224 82 156;
  --ice-secondary-content: 255 255 255;
  --ice-accent: 19 168 168;
  --ice-accent-hover: 19 133 133;
  --ice-accent-active: 51 188 183;
  --ice-accent-content: 255 255 255;
  --ice-info: 43 74 203;
  --ice-info-hover: 38 62 160;
  --ice-info-active: 82 115 224;
  --ice-info-content: 255 255 255;
  --ice-base-100: 29 35 42;
  --ice-base-200: 25 30 36;
  --ice-base-300: 21 25 30;
  --ice-base-content: 166 173 187;
  --ice-ant-neutral-1300: 255 255 255;
  --ice-ant-neutral-1200: 250 250 250;
  --ice-ant-neutral-1100: 245 245 245;
  --ice-ant-neutral-1000: 240 240 240;
  --ice-ant-neutral-900: 217 217 217;
  --ice-ant-neutral-800: 191 191 191;
  --ice-ant-neutral-700: 140 140 140;
  --ice-ant-neutral-600: 89 89 89;
  --ice-ant-neutral-500: 67 67 67;
  --ice-ant-neutral-400: 38 38 38;
  --ice-ant-neutral-300: 31 31 31;
  --ice-ant-neutral-200: 20 20 20;
  --ice-ant-neutral-100: 0 0 0;
  --ice-rounded-box: 1rem;
  --ice-rounded-btn: 0.5rem;
  --ice-rounded-badge: 1.9rem;
  --ice-animation-btn: 0.25s;
  --ice-animation-input: 0.2s;
  --ice-skeleton-duration: 1.2s;
  --ice-border-btn: 1px;
  --ice-tab-border: 1px;
  --ice-tab-radius: 0.5rem ;
}"
`;

exports[`build > build base change default selector case  > legacy 1`] = `
"page {
  --ice-primary: 22,119,255;
  --ice-primary-hover: 64,150,255;
  --ice-primary-active: 9,88,217;
  --ice-primary-content: 255,255,255;
  --ice-success: 82,196,26;
  --ice-success-hover: 115,209,61;
  --ice-success-active: 56,158,13;
  --ice-success-content: 255,255,255;
  --ice-warning: 250,173,20;
  --ice-warning-hover: 255,197,61;
  --ice-warning-active: 212,136,6;
  --ice-warning-content: 255,255,255;
  --ice-error: 245,34,45;
  --ice-error-hover: 255,77,79;
  --ice-error-active: 207,19,34;
  --ice-error-content: 255,255,255;
  --ice-neutral: 102,102,102;
  --ice-neutral-hover: 115,115,115;
  --ice-neutral-active: 64,64,64;
  --ice-neutral-content: 255,255,255;
  --ice-secondary: 235,47,150;
  --ice-secondary-hover: 247,89,171;
  --ice-secondary-active: 196,29,127;
  --ice-secondary-content: 255,255,255;
  --ice-accent: 19,194,194;
  --ice-accent-hover: 54,207,201;
  --ice-accent-active: 8,151,156;
  --ice-accent-content: 255,255,255;
  --ice-info: 47,84,235;
  --ice-info-hover: 89,126,247;
  --ice-info-active: 29,57,196;
  --ice-info-content: 255,255,255;
  --ice-base-100: 255,255,255;
  --ice-base-200: 242,242,242;
  --ice-base-300: 229,230,230;
  --ice-base-content: 31,41,55;
  --ice-ant-neutral-100: 255,255,255;
  --ice-ant-neutral-200: 250,250,250;
  --ice-ant-neutral-300: 245,245,245;
  --ice-ant-neutral-400: 240,240,240;
  --ice-ant-neutral-500: 217,217,217;
  --ice-ant-neutral-600: 191,191,191;
  --ice-ant-neutral-700: 140,140,140;
  --ice-ant-neutral-800: 89,89,89;
  --ice-ant-neutral-900: 67,67,67;
  --ice-ant-neutral-1000: 38,38,38;
  --ice-ant-neutral-1100: 31,31,31;
  --ice-ant-neutral-1200: 20,20,20;
  --ice-ant-neutral-1300: 0,0,0;
  --ice-rounded-box: 1rem;
  --ice-rounded-btn: 0.5rem;
  --ice-rounded-badge: 1.9rem;
  --ice-animation-btn: 0.25s;
  --ice-animation-input: 0.2s;
  --ice-skeleton-duration: 1.2s;
  --ice-border-btn: 1px;
  --ice-tab-border: 1px;
  --ice-tab-radius: 0.5rem ;
}

.dark {
  --ice-primary: 22,104,220;
  --ice-primary-hover: 21,84,173;
  --ice-primary-active: 60,137,232;
  --ice-primary-content: 255,255,255;
  --ice-success: 73,170,25;
  --ice-success-hover: 60,134,24;
  --ice-success-active: 106,190,57;
  --ice-success-content: 255,255,255;
  --ice-warning: 216,150,20;
  --ice-warning-hover: 170,119,20;
  --ice-warning-active: 232,179,57;
  --ice-warning-content: 255,255,255;
  --ice-error: 211,32,41;
  --ice-error-hover: 166,29,36;
  --ice-error-active: 232,71,73;
  --ice-error-content: 255,255,255;
  --ice-neutral: 90,90,90;
  --ice-neutral-hover: 73,73,73;
  --ice-neutral-active: 106,106,106;
  --ice-neutral-content: 255,255,255;
  --ice-secondary: 203,43,131;
  --ice-secondary-hover: 160,38,105;
  --ice-secondary-active: 224,82,156;
  --ice-secondary-content: 255,255,255;
  --ice-accent: 19,168,168;
  --ice-accent-hover: 19,133,133;
  --ice-accent-active: 51,188,183;
  --ice-accent-content: 255,255,255;
  --ice-info: 43,74,203;
  --ice-info-hover: 38,62,160;
  --ice-info-active: 82,115,224;
  --ice-info-content: 255,255,255;
  --ice-base-100: 29,35,42;
  --ice-base-200: 25,30,36;
  --ice-base-300: 21,25,30;
  --ice-base-content: 166,173,187;
  --ice-ant-neutral-1300: 255,255,255;
  --ice-ant-neutral-1200: 250,250,250;
  --ice-ant-neutral-1100: 245,245,245;
  --ice-ant-neutral-1000: 240,240,240;
  --ice-ant-neutral-900: 217,217,217;
  --ice-ant-neutral-800: 191,191,191;
  --ice-ant-neutral-700: 140,140,140;
  --ice-ant-neutral-600: 89,89,89;
  --ice-ant-neutral-500: 67,67,67;
  --ice-ant-neutral-400: 38,38,38;
  --ice-ant-neutral-300: 31,31,31;
  --ice-ant-neutral-200: 20,20,20;
  --ice-ant-neutral-100: 0,0,0;
  --ice-rounded-box: 1rem;
  --ice-rounded-btn: 0.5rem;
  --ice-rounded-badge: 1.9rem;
  --ice-animation-btn: 0.25s;
  --ice-animation-input: 0.2s;
  --ice-skeleton-duration: 1.2s;
  --ice-border-btn: 1px;
  --ice-tab-border: 1px;
  --ice-tab-radius: 0.5rem ;
}"
`;

exports[`build > build base with custom types 1`] = `undefined`;

exports[`build > build nothing 1`] = `undefined`;

exports[`build > hash map init buildBase 1`] = `
[
  [
    "/Users/icebreaker/Documents/GitHub/icestack/packages/core/test/configs/icestack.config.cjs#base",
    {
      "value": "111be6761208e1255ba6f69b344e83a2417fb445",
    },
  ],
]
`;

exports[`build > hash map init buildBase 2`] = `
[
  [
    "/Users/icebreaker/Documents/GitHub/icestack/packages/core/test/configs/icestack.config.cjs#base",
    {
      "value": "111be6761208e1255ba6f69b344e83a2417fb445",
    },
  ],
]
`;

exports[`build > hash map init buildBase 3`] = `
[
  [
    "/Users/icebreaker/Documents/GitHub/icestack/packages/core/test/configs/icestack.config.cjs#base",
    {
      "value": "111be6761208e1255ba6f69b344e83a2417fb445",
    },
  ],
]
`;

exports[`build > hash map init buildComponents 1`] = `
[
  [
    "/Users/icebreaker/Documents/GitHub/icestack/packages/core/test/configs/icestack.config.cjs#base",
    {
      "value": "111be6761208e1255ba6f69b344e83a2417fb445",
    },
  ],
  [
    "/Users/icebreaker/Documents/GitHub/icestack/packages/core/test/configs/a.config.cjs#utilities",
    {
      "value": "c2ae845ceaac5cf5897e8ae606b8504d915c52c3",
    },
  ],
  [
    "/Users/icebreaker/Documents/GitHub/icestack/packages/core/test/configs/buildComponents.cjs#types",
    {
      "value": "989db2448f309bfdd99b513f37c84b8f5794d2b5",
    },
  ],
  [
    "/Users/icebreaker/Documents/GitHub/icestack/packages/core/test/configs/buildComponents0.cjs#types",
    {
      "value": "989db2448f309bfdd99b513f37c84b8f5794d2b5",
    },
  ],
]
`;

exports[`build > hash map init buildComponents 2 1`] = `
[
  [
    "/Users/icebreaker/Documents/GitHub/icestack/packages/core/test/configs/icestack.config.cjs#base",
    {
      "value": "111be6761208e1255ba6f69b344e83a2417fb445",
    },
  ],
  [
    "/Users/icebreaker/Documents/GitHub/icestack/packages/core/test/configs/a.config.cjs#utilities",
    {
      "value": "c2ae845ceaac5cf5897e8ae606b8504d915c52c3",
    },
  ],
  [
    "/Users/icebreaker/Documents/GitHub/icestack/packages/core/test/configs/buildComponents0.cjs#types",
    {
      "value": "989db2448f309bfdd99b513f37c84b8f5794d2b5",
    },
  ],
  [
    "/Users/icebreaker/Documents/GitHub/icestack/packages/core/test/configs/buildComponents.cjs#types",
    {
      "value": "989db2448f309bfdd99b513f37c84b8f5794d2b5",
    },
  ],
]
`;

exports[`build > hash map init buildComponents diff 1`] = `
[
  [
    "/Users/icebreaker/Documents/GitHub/icestack/packages/core/test/configs/icestack.config.cjs#base",
    {
      "value": "111be6761208e1255ba6f69b344e83a2417fb445",
    },
  ],
  [
    "/Users/icebreaker/Documents/GitHub/icestack/packages/core/test/configs/a.config.cjs#utilities",
    {
      "value": "c2ae845ceaac5cf5897e8ae606b8504d915c52c3",
    },
  ],
  [
    "/Users/icebreaker/Documents/GitHub/icestack/packages/core/test/configs/buildComponents0.cjs#types",
    {
      "value": "989db2448f309bfdd99b513f37c84b8f5794d2b5",
    },
  ],
  [
    "/Users/icebreaker/Documents/GitHub/icestack/packages/core/test/configs/buildComponents.cjs#types",
    {
      "value": "989db2448f309bfdd99b513f37c84b8f5794d2b5",
    },
  ],
  [
    "/Users/icebreaker/Documents/GitHub/icestack/packages/core/test/configs/buildComponents1.cjs#components.alert",
    {
      "value": "ff5cbce0b1e50d71e84b0532eaefbe92a9aee89e",
    },
  ],
  [
    "/Users/icebreaker/Documents/GitHub/icestack/packages/core/test/configs/buildComponents1.cjs#types",
    {
      "value": "989db2448f309bfdd99b513f37c84b8f5794d2b5",
    },
  ],
]
`;

exports[`build > hash map init buildUtilities 1`] = `
[
  [
    "/Users/icebreaker/Documents/GitHub/icestack/packages/core/test/configs/icestack.config.cjs#base",
    {
      "value": "111be6761208e1255ba6f69b344e83a2417fb445",
    },
  ],
  [
    "/Users/icebreaker/Documents/GitHub/icestack/packages/core/test/configs/a.config.cjs#utilities",
    {
      "value": "c2ae845ceaac5cf5897e8ae606b8504d915c52c3",
    },
  ],
]
`;
